[package]
name = "riker-macros"
version = "0.2.0"
authors = ["Lee Smith <lee@riker.rs>"]
edition = "2021"
description = "Macro crate for Riker actor framework"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
syn = { version ="2.0.72", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
async-trait = "0.1.81"

[dev-dependencies]
riker = { path = "../riker" }
