[package]
name = "riker-testkit"
version = "0.1.0"
edition = "2021"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "Tools to make testing Riker applications easier"
homepage = "http://riker.rs/logging"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
chrono = "0.4.38"
async-trait = { version = "0.1.81" }
riker-macros = { path = "../riker-macros" }
